# AdhocQueryProcessing

./: .gitignore  CMakeLists.txt  README.md  sdap.sql  stdin_example.txt  stdin_example_2.txt  stdin_example_3.txt
MFQueryInputParser/src/: ParserClass.cc  ParserClass.hpp  PyCode.cc  PyCode.hpp  inputStruct.hpp  main.cc
MFQueryInputParser/test/PyCodeHPPTest/: testGenerateMFStructPy.cc  testGenerateMFStructPy.out
algos_structures/: mfquery.py
docker/: docker-compose.yml
main/src/: ParserClass.cc  ParserClass.cpp  ParserClass.h  ParserClass.hpp  ParserClassException.hpp  PyCode.cc  PyCode.h  PyCode.hpp  inputStruct.h  main.cc  parsedStruct.h  parsedStruct.hpp
postgreSQL_docker/: docker-compose.yml
